# aegis

./: .dockerignore  Dockerfile  README.md  inference.py  openenv.yaml  requirements.txt  test_validate.py
aegis-red/: Dockerfile  README.md  __init__.py  client.py  openenv.yaml  pyproject.toml  requirements.txt  test_validate.py
aegis-red/environment/: __init__.py  env.py  graders.py  models.py  reward.py
aegis-red/environment/attacks/: __init__.py  goal_drift.py  honeytoken.py  prompt_injection.py  tool_poisoning.py
aegis-red/server/: app.py
aegis-red/tasks/: __init__.py  easy.py  hard.py  medium.py
aegis-red/tests/: test_env.py  test_graders.py
environment/: env.py
tasks/: hard.py  medium.py
