[project]
name = "aegis-red"
version = "1.0.0"
description = "Cyber-Security Gauntlet for stress-testing AI agent safety"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment", "tasks"]

[project.scripts]
server = "server.app:main"